Fix: updated technical offices roles
